@@ -4556,11 +4556,8 @@ def choseClient(self):
          
     engine = create_engine('postgresql+psycopg2://postgres@localhost/catering')
     con = engine.connect()
-    if self.maccess < 2:
-        selcl = select([clients]).where(clients.c.employee == self.mcallname).\
-            order_by(clients.c.clientID)
-    else:
-        selcl = select([clients]).order_by(clients.c.clientID)
+    selcl = select([clients]).where(clients.c.employee == self.mcallname).\
+        order_by(clients.c.clientID)
     if con.execute(selcl).fetchone():
         rpcl = con.execute(selcl)
     else:
@@ -4832,8 +4829,23 @@ def seatsArrange(self):
                                      seatlist[x]).values(occupied=0,clientID=0,callname='')
                                     con.execute(upd)
                                 else:
-                                    self.lblseats.setText('Last seat can only be removed by button "TRANSFER PAYED" in mainscreen!')
-                                    
+                                    metadata = MetaData()
+                                    order_lines = Table('order_lines', metadata,
+                                        Column('ID', Integer, primary_key=True),
+                                        Column('clientID', Integer),
+                                        Column('callname', String))
+                                    selol = select([order_lines]).where(and_(order_lines.c.\
+                                      clientID == self.mclient, order_lines.c.callname == self.mcallname))
+                                    rpol = con.execute(selol).first()
+                                    if rpol and s == 1:
+                                        self.lblseats.setText('Last seat can only be removed by button "TRANSFER PAYED" in mainscreen!')
+                                    else:
+                                        upd = update(tables_layout).where(tables_layout.c.ID ==\
+                                          seatlist[x]).values(occupied=0,clientID=0,callname='')
+                                        con.execute(upd)  
+                                        delol = delete(clients).where(and_(clients.c.clientID ==\
+                                            self.mclient, clients.c.employee == self.mcallname))
+                                        con.execute(delol)
                         x += 1
                     if mflag:
                         inlogstr = ('010'+('000'+str(mclientnr))[-4:])
